--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 header{
     position: relative;
-    z-index: 2;
+    z-index: 3;
     height: 80px;
     color: $color-dark;
     background-color: $color-white;
