--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 2;
     opacity: 0;
     background: $color-primary;
     display: flex;
@@ -67,7 +67,6 @@
 
 main{
     position: relative;
-    z-index: -3;
 
     .message{
         position: fixed;
